<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.uoj.team.unduh.kept">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/setting_button"
        android:orderInCategory="101"
        android:title="@string/action_settings"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home_button"
        android:orderInCategory="102"
        android:title="@string/action_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="103"
        android:title="@string/action_search"
        app:showAsAction="always" />


</menu>